--- a/Acme-Hacker-Rank/src/main/webapp/WEB-INF/web.xml
+++ b/Acme-Hacker-Rank/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
     <param-value>classpath:spring/servlet.xml</param-value>
   </context-param>
   <servlet>
-    <servlet-name>SampleServlet</servlet-name>
+    <servlet-name>AcmeHackerRankServlet</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextConfigLocation</param-name>
@@ -29,7 +29,7 @@
     </init-param>
   </servlet>
   <servlet-mapping>
-    <servlet-name>SampleServlet</servlet-name>
+    <servlet-name>AcmeHackerRankServlet</servlet-name>
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
   <filter>
