--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 \.RemoteSystemsTempFiles/
 \Scrapbook/
 \Servers/
-\Acme-Parade/target
-\Acme-Parade/.settings
-\Acme-Parade/src/main/resources/Entities.map
+\Acme-Hacker-Rank/target
+\Acme-Hacker-Rank/.settings
+\Acme-Hacker-Rank/src/main/resources/Entities.map
 RemoteSystemsTempFiles/
