--- a/Acme-Hacker-Rank/pom.xml
+++ b/Acme-Hacker-Rank/pom.xml
@@ -319,6 +319,12 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.7.4</version>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.jsoup</groupId>
+    		<artifactId>jsoup</artifactId>
+    		<version>1.11.3</version>
+		</dependency>
 
 	</dependencies>
 
